@startuml src
!pragma useIntermediatePackages false

abstract class src.connection.connection_factory.ConnectionFactory {
}
class src.connection.postgres_connection_factory.PostgresConnectionFactory {
}
class src.monitors.monitor.Monitor {
  _buffer: list[tuple]
  _buffer_size: int
  _workers: list[Thread]
  _producers_online: int
  _mutex: Semaphore
  _full: Condition
  _empty: Condition
  _insert_query_avaliable: Condition
  _end_process: Event
  _timeout: int
  _insert_query: None
}
class src.utils.log.log_utils.LogUtils {
}
class src.workers.sqlalchemy_consumer.SQLAlchemyConsumer {
  _engine: Engine
  _table_manager: TableManager
}
class src.workers.sqlalchemy_producer.SQLAlchemyProducer {
  _engine: Engine
  _query: str
  _max_rows_buffer: int
  _chunksize: int
  _table_manager: TableManager
  _table_target: str
}
class src.templates.template_stage_ad_hoc_query_multithread.StageAdHocMultiThread {
  _query: str
  _table_name_target: str
  _conn_input: Engine
  _conn_output: Engine
  _consumers: int
  _monitor_timeout: int
  _monitor_buffer_size: int
  _max_rows_buffer: int
  _chunksize: int
  _table_manager: TableManager
  _log_utils: LogUtils
  _logger: None
}
class src.utils.table.table_manager.TableManager {
}
class src.templates.template_stage_copy_table_multithread.StageCopyTableMultiThread {
  _table_name_source: str
  _table_name_target: str
  _conn_input: Engine
  _conn_output: Engine
  _consumers: int
  _monitor_timeout: int
  _monitor_buffer_size: int
  _max_rows_buffer: int
  _chunksize: int
  _log_utils: LogUtils
  _table_manager: TableManager
  _logger: None
}
class src.workers.base_worker.BaseWorker {
  _stop: None
  _monitor: Monitor
  _is_producer: bool
}
src.connection.connection_factory.ConnectionFactory <|-- src.connection.postgres_connection_factory.PostgresConnectionFactory
src.workers.sqlalchemy_consumer.SQLAlchemyConsumer *-- src.utils.table.table_manager.TableManager
src.workers.base_worker.BaseWorker <|-- src.workers.sqlalchemy_consumer.SQLAlchemyConsumer
src.workers.sqlalchemy_producer.SQLAlchemyProducer *-- src.utils.table.table_manager.TableManager
src.workers.base_worker.BaseWorker <|-- src.workers.sqlalchemy_producer.SQLAlchemyProducer
src.templates.template_stage_ad_hoc_query_multithread.StageAdHocMultiThread *-- src.utils.table.table_manager.TableManager
src.templates.template_stage_ad_hoc_query_multithread.StageAdHocMultiThread *-- src.utils.log.log_utils.LogUtils
src.templates.template_stage_copy_table_multithread.StageCopyTableMultiThread *-- src.utils.log.log_utils.LogUtils
src.templates.template_stage_copy_table_multithread.StageCopyTableMultiThread *-- src.utils.table.table_manager.TableManager
src.workers.base_worker.BaseWorker *-- src.monitors.monitor.Monitor
footer Generated by //py2puml//
@enduml

